# TerminalRenderingEnginE

./: .gitignore  LICENSE  README.md  build_and_run.sh
.github/workflows/: pypi-wheels.yml
Demo/: CMakeLists.txt  Demo.c  devenv.bat  devenv.sh  run.bat
PyTREE/: README.md
PyTREE/Demo/: demo.py
PyTREE/Source/: LICENSE  MANIFEST.in  PyTREE.c  README.md  TREE.h  devenv.bat  devenv.sh  pyproject.toml  setup.py  upload_pypi.bat
PyTREE/Source/pytre.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyTREE/Test/: PyTREE.pyi  demo.py  pytre.py  pytree_ui.py  test.py
Python/: CMakeLists.txt  TREEmodule.c  devenv.bat
Source/: CMakeLists.txt  TREE.c  TREE.h  TREE.sln  TREE.vcxproj  TREE.vcxproj.filters  devenv.bat  devenv.sh  pch.h
TREE/Source/: CMakeLists.txt  TREE.c  devenv.bat  devenv.sh
TREE/Test/: devenv.bat  devenv.sh
Test/: CMakeLists.txt  Test.c  Test.sln  Test.vcxproj  build.sh  devenv.bat  devenv.sh
